@@ -15,6 +15,6 @@ Description: Configure the Logical Volume Manager
 
 Package: lvmcfg-utils
 Architecture: all
-Depends: cdebconf-udeb, md-modules, lvm2-udeb, parted-udeb
+Depends: cdebconf-udeb, md-modules, lvm2-udeb, parted-udeb, di-utils (>= 1.13)
 XC-Package-Type: udeb
 Description: lvmcfg without the main menu item
