@@ -1,8 +1,12 @@
 lvmcfg (1.08) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Update GPL notices with the FSF's new address.
 
- -- Colin Watson <cjwatson@debian.org>  Sun, 31 Jul 2005 17:07:25 +0100
+  [ Joey Hess ]
+  * Use log-output.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 22 Sep 2005 09:29:13 +0200
 
 lvmcfg (1.07) unstable; urgency=low
 
